# SolanaPrivacyKit

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  MAINNET_MIGRATION_GUIDE.md  QUICK_START_MAINNET.md  README.md  SCRIPT_FOR_DEMO_VIDEO.md  WALLET_FIX_SUMMARY.md  package-lock.json  package.json  tsconfig.base.json
.privacy/: config.json
apps/demo/: .env.local.example  README.md  next.config.js  package.json  tsconfig.json
apps/demo/app/: globals.css  layout.tsx  page.tsx
apps/demo/app/api/balance/: route.ts
apps/demo/app/api/shield/: route.ts
apps/demo/app/api/transfer/: route.ts
apps/demo/app/api/unshield/: route.ts
apps/demo/app/api/verify/: route.ts
apps/demo/components/: DemoCard.tsx  WalletProvider.tsx
programs/privacy_devkit/: Cargo.toml
programs/privacy_devkit/src/: lib.rs
