[package]
name = "privacy_devkit"
version = "0.1.0"
description = "Minimal Anchor program for Privacy Devkit (devnet)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_devkit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
